--- a/chapter2.tex
+++ b/chapter2.tex
@@ -23,7 +23,7 @@
 فرض کنید $c(u,v) = |N(u) \cap N(v)|$ تعداد همسایه‌های مشترک دو رأس $u$ و $v$ باشد. همینطور $p(u,v)$ تعداد مسیرهای سه رأسی باشد که از رأس $u$ آغاز می‌شود، به رأس $v$ می‌رود و در رأسی مثل $t$ که به $u$ متصل نیست، پایان می‌یابد. این عدد به راحتی قابل محاسبه است: 
 $p(u,v) = deg(v) -1 -c(u,v)$.
 
-اگر رأس $x$ روی یک گرافلت $k$-رأسی مثل $G_i$ قرار گرفته باشد، حتماً روی یک گرافلت $(k-1)$-رأسی مثل $G_j$ هم قرار گرفته است، کافی است دورترین رأس از $x$ را از گراف $G_i$ حذف کنیم. زیرگرافی که از باقی رئوس بوجود می‌آید همبند است (در غیر این صورت، رأسی که جزء مؤلفه همبندی نیست دورترین رأس از $x$ بوده است) بنابراین با یکی از گرافلت‌های $(k-1)$-رأسی مثل $G_j$ یکریخت است.
+اگر رأس $x$ روی یک گرافلت $k$-رأسی مثل $G_i$ قرار گرفته باشد، حتماً روی یک گرافلت $(k-1)$-رأسی مثل $G_j$ هم قرار گرفته است، کافی است دورترین رأس از $x$ را از گراف $G_i$ حذف کنیم. زیرگرافی که از باقی رئوس بوجود می‌آید، همبند است (در غیر این صورت، رأسی که جزء مؤلفه‌ی همبندی نیست دورترین رأس از $x$ بوده است) بنابراین با یکی از گرافلت‌های $(k-1)$-رأسی مثل $G_j$ یکریخت است.
 
 عکس این مطلب نیز صحیح است: هر گرافلت چهار رأسی را می‌توان با افزودن یک رأس به یکی از گرافلت‌های سه رأسی ساخت. جهت یافتن رابطه تعداد اوربیت‌های گرافلت‌های چهار رأسی برای رأس $x$، تمام اوربیت‌های سه‌رأسی که $x$ روی آن‌ها قرار گرفته است را می‌یابیم و سپس امکان گسترش آن‌ها به گرافلت‌های چهار رأسی را بررسی می‌کنیم.
 
@@ -54,7 +54,7 @@ $p(u,v) = deg(v) -1 -c(u,v)$.
 2o_6+2o_9 = \sum_{\substack{y,z: x,z\in N(y)\\G[\{x,y,z\}] \simeq G_1 }}(p(x,y) - 1).
 \end{equation*}
 
-از آنجایی که تنها دو گرافلت سه رأسی وجود دارد و حالت‌های گسترش نیز محدود‌اند، می‌توان تمام گسترش‌های ممکن را در نظر گرفت و از آن‌ها یک دستگاه با ده معادله مستقل خطی و یازده متغیر (متناظر با یازده اوربیت گرافلت‌های چهار رأسی) استخراج کرد. در ضمیمه \ارجا{appendix:combinatorial-counting} این معادلات را آورده‌ایم.
+از آنجایی که تنها دو گرافلت سه رأسی وجود دارد و حالت‌های گسترش نیز محدود‌اند، می‌توان تمام گسترش‌های ممکن را در نظر گرفت و از آن‌ها یک دستگاه با ده معادله مستقل خطی و یازده متغیر (متناظر با یازده اوربیت گرافلت‌های چهار رأسی) استخراج کرد.
 
 عبارات موجود در سمت راست این معادلات، تنها وابسته به گراف $G$ هستند و باید برای هر رأس $x$ محاسبه شوند. برای افزایش سرعت اجرا، برای هر دو رأس $u$ و $v$ مقادیر $c(u,v)$ و $p(u,v)$ را از قبل محاسبه می‌کنیم. البته کافی است این مقادیر را تنها برای رئوس مجاور و نه همه رئوس، بدست آورد زیرا طبق تعریف، $p(u,v)$ فقط برای دو رأس مجاور تعریف می‌شود و همچنین در تمام معادلات به غیر از معادله آخر، $c(u,v)$ تنها برای رئوسی که همسایه هستند مورد نیاز است. بنابراین با اختصاص $O(m)$ فضا، این مقادیر را محاسبه می‌کنیم. برای معادله آخر، کافی است تعداد مسیر‌های به طول دو که از رأس $x$ شروع می‌شوند و به رأس $y$ خاتمه می‌یابند را بشماریم. این کار نیاز به $O(n)$ فضا دارد. چون تعداد اوربیت‌ها را برای هر رأس جداگانه شمارش می‌کنیم، می‌توان از این فضا مجدداً استفاده نمود. با این وصف، مقادیر سمت راست معادله در زمان ثابت و میزان حافظه $O(m+n)$ محاسبه می‌شوند.
 
@@ -137,10 +137,10 @@ $\dfrac{k_i}{\sum_jk_j}$
 
 \paragraph{مدل تصادفی هندسی (GEO)}
 مدل گراف تصادفی هندسی برای مدل‌سازی و تحلیل شبکه‌های سنسور بی‌سیم\جستار{Bettstetter_2002} و همچنین شبکه‌های تعاملات پروتئینی\جستار{Przulj_2004} مورد استفاده قرار گرفته است. در این مدل، 
-برای ساخت یک گراف تصادفی هندسی با $n$ رأس و به شعاع $r$، $n$ نقطه متناظر با رئوس در فضای $\R^d$ به طول واحد به صورت تصادفی و به احتمال یکنواخت قرار داده می‌شوند. بین رئوس متناظر با نقاطی که فاصله اقلیدسی آن‌ها کمتر از $r$ باشد، یال قرار داده می‌شود.
+برای ساخت یک گراف تصادفی هندسی با $n$ رأس و به شعاع $r$، $n$ نقطه متناظر با رئوس در فضای $\R^d$ به طول واحد به صورت تصادفی و به احتمال یکنواخت قرار داده می‌شوند. بین رئوس متناظر با نقاطی که فاصله‌ی اقلیدسی آن‌ها کمتر از $r$ باشد، یال قرار داده می‌شود.
 
 \paragraph{مدل ترتیبی ساخت گراف تصادفی (CM)}
-هدف از ارائه این مدل، ساخت گراف از روی دنباله درجه دلخواه، و در نتیجه، توزیع درجه دلخواه بوده‌است\جستار{Molloy_1995}. در این مدل، برای هر دنباله درجه قابل قبول (یعنی جمع اعداد دنباله، عددی زوج باشد)، از گردایه‌ی گراف‌ها با آن توزیع درجه، یک گراف به صورت تصادفی انتخاب می‌شود. البته باید توجه داشت که گراف‌های حاصل الزاماً ساده نیستند. برای تبدیل گراف به یک گراف ساده، طوقه‌ها و یال‌های چندگانه از گراف حذف می‌شوند. اینکار باعث تغییر در دنباله درجه می‌شود که البته در گراف‌های بزرگ، این تغییر قابل چشم‌پوشی است. در این مدل، متناسب با دنباله درجه داده شده مثل $\vec{k}$، $n$ رأس در نظر گرفته می‌شود. به هر رأس $n_i$ متناسب با درجه در نظر گرفته شده برای آن، $k_i$ نیم یال نسبت داده می‌شود. نیم‌یال‌ها به صورت تصادفی به یکدیگر متصل می‌شوند. نتیجه یک گراف با توزیع درجه داده‌ شده خواهد بود.
+هدف از ارائه این مدل، ساخت گراف از روی دنباله درجه‌ی دلخواه، و در نتیجه، توزیع درجه دلخواه بوده‌است\جستار{Molloy_1995}. در این مدل، برای هر دنباله درجه‌ی قابل قبول (یعنی جمع اعداد دنباله، عددی زوج باشد)، از گردایه‌ی گراف‌ها با آن توزیع درجه، یک گراف به صورت تصادفی انتخاب می‌شود. البته باید توجه داشت که گراف‌های حاصل الزاماً ساده نیستند. برای تبدیل گراف به یک گراف ساده، طوقه‌ها و یال‌های چندگانه از گراف حذف می‌شوند. اینکار باعث تغییر در دنباله درجه می‌شود که البته در گراف‌های بزرگ، این تغییر قابل چشم‌پوشی است. در این مدل، متناسب با دنباله درجه داده شده مثل $\vec{k}$، $n$ رأس در نظر گرفته می‌شود. به هر رأس $n_i$ متناسب با درجه در نظر گرفته شده برای آن، $k_i$ نیم یال نسبت داده می‌شود. نیم‌یال‌ها به صورت تصادفی به یکدیگر متصل می‌شوند. نتیجه یک گراف با توزیع درجه داده‌ شده خواهد بود.
 
 \subsection{داده‌‌ها}
 از مدل‌های تصادفی معرفی شده، گراف‌هایی با اندازه ۱۰ تا ۱۰۰۰ رأس تولید شد. جدول \ارجا{tab:random-graph-datasets-statistics} پارامترهای انتخابی برای هر مدل و تعداد گراف‌های تولید شده را مشخص کرده‌است. ذکر این نکته ضروری است که تضمینی برای همبندی گراف‌های تولید شده برای بعضی مدل‌ها وجود ندارد. به همین دلیل، پس از تولید گراف‌ها، بزرگترین مؤلفه همبندی هر کدام استخراج و به عنوان گراف نهایی مورد استفاده قرار گرفته‌است. در بعضی مواقع، دو مؤلفه همبندی اندازه یکسان داشته‌اند که در این صورت، یکی از آن‌ها به صورت تصادفی حذف شده‌است. لذا تعداد گراف‌های نهایی برای مدل‌های مختلف، متفاوت است. همچنین توجه شود که از مدل ترتیبی ساخت گراف تصادفی برای تولید گراف‌هایی با توزیع درجه \متن‌لاتین{power law} در توان‌های مختلف استفاده شده‌است. برای این مدل‌ها، ستون پارامتر، توان تابع توزیع را مشخص می‌کند.
