--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,9 +1,9 @@
 \chapter{پیش‌بینی عملکرد پروتئین‌ها با استفاده از گرافلت کرنل گاوسی}\label{chap:protein_function_prediction}
 
-پروتئین‌ها بخش مهمی از فعالیت‌های زیستی را تشکیل می‌دهند. درک نحوه کار آن‌ها وابسته به یافتن عملکرد و وظیفه هر کدام در سامانه‌های زیستی است. مطالعه پروتئین‌ها و پیش‌بینی ساختار و عملکرد آن‌ها، بخش مهمی از بیوانفورماتیک به نام \خمیده{بیوانفورماتیک ساختاری}\پانوشت{\متن‌لاتین{Structural bioinformatics}} را تشکیل می‌دهد. در این فصل از پایان‌نامه، بعد از مرور مفاهیم مورد نیاز، نگاهی به روش‌های پیش‌بینی عملکرد پروتئین بر مبنای SVM خواهیم داشت و گرافلت کرنل گاوسی را با این روش‌ها مقایسه خواهیم کرد.
+پروتئین‌ها بخش مهمی از فعالیت‌های زیستی را تشکیل می‌دهند. درک نحوه‌ی کار آن‌ها وابسته به یافتن عملکرد و وظیفه‌ی هر کدام در سامانه‌های زیستی است. مطالعه پروتئین‌ها و پیش‌بینی ساختار و عملکرد آن‌ها، بخش مهمی از بیوانفورماتیک به نام \خمیده{بیوانفورماتیک ساختاری}\پانوشت{\متن‌لاتین{Structural bioinformatics}} را تشکیل می‌دهد. در این فصل از پایان‌نامه، بعد از مرور مفاهیم مورد نیاز، نگاهی به روش‌های پیش‌بینی عملکرد پروتئین بر مبنای SVM خواهیم داشت و گرافلت کرنل گاوسی را با این روش‌ها مقایسه خواهیم کرد.
 
 \section{پروتئین‌ها}\label{sec:protein-structure}
-پروتئین‌ها مواد آلی بزرگ و یکی از انواع درشت مولکول‌های زیستی هستند که از \خمیده{اسیدهای آمینه} ساخته شده‌اند. هر اسیدآمینه، از یک کربن نامتقارن به نام کربن آلفا تشکیل یافته است که با چهار گروه مختلف کربوکسیل (\متن‌لاتین{COOH})، اتم هیدروژن، گروه آمینه (\متن‌لاتین{NH2}) و یک زنجیره جانبی (R) ارتباط برقرار می‌کند (شکل \ارجا{fig:aminoacid}). تغییر در زنجیره جانبی، نوع متفاوتی از اسیدآمینه را بوجود می‌آورد که مبنای نامگذاری آن‌هاست. حدود پانصد اسیدآمینه تاکنون شناسایی شده‌است\جستار{Wagner_1983} که ۲۰ عدد از آن‌ها در ساختمان پروتئین‌ها مشارکت دارند. در بین این ۲۰ اسیدآمینه، به غیر از گلیسین\پانوشت{Glycine} که زنجیره جانبی آن یک اتم هیدروژن است، مابقی در زنجیره جانبی خود چند اتم کربن دارند که آن‌ها را به ترتیب فاصله از اتم کربن آلفا با حروف یونانی بتا، گاما و دلتا نامگذاری می‌کنند.
+پروتئین‌ها مواد آلی بزرگ و یکی از انواع درشت مولکول‌های زیستی هستند که از \خمیده{اسیدهای آمینه} ساخته شده‌اند. هر اسیدآمینه، از یک کربن نامتقارن به نام کربن آلفا تشکیل شده‌است که با چهار گروه مختلف کربوکسیل (\متن‌لاتین{COOH})، اتم هیدروژن، گروه آمینه (\متن‌لاتین{NH2}) و یک زنجیره جانبی (R) ارتباط برقرار می‌کند (شکل \ارجا{fig:aminoacid}). تغییر در زنجیره‌ی جانبی، نوع متفاوتی از اسیدآمینه را بوجود می‌آورد که مبنای نامگذاری آن‌هاست. حدود پانصد اسیدآمینه تاکنون شناسایی شده‌است\جستار{Wagner_1983} که ۲۰ عدد از آن‌ها در ساختمان پروتئین‌ها مشارکت دارند. در بین این ۲۰ اسیدآمینه، به غیر از گلیسین\پانوشت{Glycine} که زنجیره جانبی آن یک اتم هیدروژن است، مابقی در زنجیره جانبی خود چند اتم کربن دارند که آن‌ها را به ترتیب فاصله از اتم کربن آلفا با حروف یونانی بتا، گاما و دلتا نامگذاری می‌کنند.
 
 \begin{figure}[h]
 \center{
@@ -36,7 +36,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 \end{tikzpicture}
 }
 \caption{
-ساختار اسید‌های آمینه. هر اسیدآمینه از یک کربن آلفا تشکیل شده که با یک گروه آمینه(\متن‌لاتین{NH2})، یک گروه کربوکسیل (\متن‌لاتین{COOH}) و یک زنجیره جانبی (\متن‌لاتین{R}) ارتباط دارد.
+ساختار اسید‌های آمینه. هر اسیدآمینه از یک کربن آلفا تشکیل شده است که با یک گروه آمینه(\متن‌لاتین{NH2})، یک گروه کربوکسیل (\متن‌لاتین{COOH}) و یک زنجیره جانبی (\متن‌لاتین{R}) ارتباط دارد.
 }
 \label{fig:aminoacid}
 \end{figure}
