Last edits befor passing to Tahmasebi

--- a/backmatters.tex
+++ b/backmatters.tex
@@ -1,8 +1,8 @@
 {\small
 {\baselineskip=.75cm
-%\include{dicfa2en}
+\include{dicfa2en}
 \clearpage{\pagestyle{empty}\cleardoublepage}
-%\include{dicen2fa}}
+\include{dicen2fa}}
 \clearpage{\pagestyle{empty}\cleardoublepage}
 {\baselineskip=.6cm
 %\phantomsection
