--- a/chapter4.tex
+++ b/chapter4.tex
@@ -65,6 +65,32 @@ k((p_i,p_j),(p_u,p_v)) = k_{GGK}(p_i,p_u) + k_{GGK}(p_j,p_v)
 \section{شرایط آزمون}
 مشابه فصل قبل، برای آزمون روش پیشنهادی از زبان برنامه نویسی \متن‌لاتین{C++} جهت پیاده‌سازی کرنل‌ و از زبان \متن‌لاتین{R} به منظور یادگیری روی ماشین \متن‌لاتین{C-SVM} و تحلیل داده‌ها استفاده کردیم. آزمون در قالب \متن‌لاتین{10-fold cross validation}، ده بار تکرار شد.
 
-\section{بررسی نتایج و مقایسه}
+\section{مقایسه و بررسی نتایج}
+در این بخش به مقایسه روش پیشنهادی که به اختصار GKPIP می‌نامیم با روش \متن‌لاتین{FpClass}\جستار{Kotlyar_2014} می‌پردازیم. \متن‌لاتین{FpClass} روشی مبتنی بر داده‌کاوی است که اطلاعات مختلفی از پروتئین‌ها را برای پیش‌بینی تعامل، مورد استفاده قرار می‌دهد. این اطلاعات شامل دامین‌ها، تغییرات بعد از ترجمه\پانوشت{post-translational modifications}، برچسب‌های \متن‌لاتین{GO}، توپولوژی شبکه تعاملات، هم‌بیانی ژن‌ها و ویژگی‌های فیزیکی و شیمیایی پروتئین‌هاست. در این روش، بطور مجزا برای هر ويژگی، یک احتمال به هر تعامل نسبت داده می‌شود. این عدد نشان می‌دهد که بر مبنای آن ویژگی خاص، چقدر وجود هر تعامل محتمل است. در نهایت با استفاده از شبکه بیزی، این احتمالات ترکیب شده و برای هر تعامل یک احتمال نهایی بدست می‌آید.  شبکه بیزی بکار رفته در این روش، روی داده‌های بسیار بزرگ شامل 2 میلیون تعامل آموزش داده شده و  نتایج بسیار خوبی داشته است.
+
+به دو دلیل ما نمی‌توانیم ماشین \متن‌لاتین{SVM} طراحی شده را روی این حجم از داده آموزش دهیم. دلیل اول، عدم وجود امکانات فنی است. آموزش این ماشین روی مجموعه بیست هزارتاییِ تشکیل شده، نیاز به حداقل ۱۶ گیگابایت حافظه دارد. برای مجموعه دو میلیونی باید حافظه‌ی بسیار بسیار بیشتری در اختیار داشت. مشکل دوم، عدم تعادل بین مجموعه مثبت و منفی است بطوری که  تقریباً ۹۷٪ از تعاملات این مجموعه دو میلیونی، در مجموعه منفی قرار می‌گیرند. برای ماشین \متن‌لاتین{SVM} این عدم تعادل به معنی تشخیص تمام تعاملات با برچسب منفی است. بنابراین برای مقایسه، ما \متن‌لاتین{FpClass} را روی داده‌های معرفی شده در بخش قبل، آموزش دادیم.
+
+شکل \ارجا{fig:roc-curve} نمودار \متن‌لاتین{ROC} برای دو روش \متن‌لاتین{GKPIP} و \متن‌لاتین{FpClass} را نشان می‌دهد. سطح زیر منحنی (\متن‌لاتین{AUROC}) برای \متن‌لاتین{GKPIP} برابر ۰.۸۵ و برای \متن‌لاتین{FpClass} برابر ۰.۵ است. به نظر می‌رسد عدم توانایی \متن‌لاتین{FpClass} در یادگیری روی این مجموعه، به دلیل حجم کم داده‌هاست. 
+
+\begin{figure}[ht]
+\center{
+\includegraphics[scale=0.5]{./roc.pdf}
+}
+\caption{
+منحنی \متن‌لاتین
+‫{‬ROC‫}‬
+برای 
+\متن‌لاتین{
+GKPIP
+} (خط صاف) و \متن‌لاتین{
+FpClass
+‫}‬
+‫(‬خط نقطه‌چین).
+}
+\label{fig:roc-curve}
+\end{figure}
+
+همانطور که گفته شد، در روش \متن‌لاتین{GKPIP}، تنها از ساختار سوم پروتئین‌ها برای یادگیری و پیش‌بینی تعاملات استفاده می‌شود. استفاده از ساختار سوم، می‌تواند یک نقطه ضعف باشد. پروتئین‌هایی که ساختار سوم معلوم دارند، در مقایسه با پروتئین‌هایی که توالی مشخص دارند، بسیار کم‌اند و همین امر باعث ایجاد محدودیت در یادگیری و همچنین محدودیت در استفاده از این روش می‌شود. در مقابل، استفاده از انواع ویژگی‌ها، همانطور که در \متن‌لاتین{FpClass} مشاهده می‌کنیم، نیز یک نقطه ضعف است. زیرا برای بسیاری از پروتئین‌ها، اطلاعاتی نظیر دامین‌ها، تغییرات بعد از ترجمه، برچسب‌های \متن‌لاتین{GO} و \سه‌نقطه مشخص نیستند و یا درجه اطمینان پایینی دارند.
 
 \section{جمع‌بندی}
+در این فصل به بررسی مسئله‌ی تکمیل شبکه‌های تعاملات پروتئینی پرداختیم. با استفاده از گرافلت کرنل گاوسی، روشی برای پیش‌بینی تعاملات ارائه دادیم که با توجه به آزمون انجام شده، در مقایسه با یکی از بهترین روش‌های موجود در این زمینه یعنی \متن‌لاتین{FpClass} عملکرد بهتری دارد. همانطور که گفته شد، یکی از مهمترین ضعف‌های این روش وابستگی به ساختار سوم پروتئین‌هاست. مطالعات بعدی، می‌تواند با استفاده از مفهوم \متن‌لاتین{template} برای توالی‌ها، این ضعف را پوشش دهد. یعنی برای هر توالی، با توجه به پروتئین‌های مشابه (که ساختار سوم مشخص دارند)، یک ساختار سوم در نظر گرفته شود. البته بهبود‌های دیگری هم می‌توان برای این روش در نظر گرفت. به عنوان مثال ساخت گراف از روی پروتئین، می‌تواند محدود به اسید‌های آمینه‌ای باشد که سطح در دسترس\پانوشت{\متن‌لاتین{RSA}} بالاتری دارند. زیرا این قسمت‌ها هستند که در تعاملات نقش بازی می‌کنند و می‌توان با ساخت گراف روی آن‌ها، قسمت‌های بی اهمیت پروتئین را حذف نمود. 
