--- a/dicen2fa.tex
+++ b/dicen2fa.tex
@@ -4,4 +4,6 @@
 \markboth{واژه‌نامه  انگلیسی به  فارسی}{واژه‌نامه  انگلیسی به  فارسی}
 
 \noindent
-\persiangloss{عامل}{agent}
+\persiangloss{ماتریس مجاورت}{adjacency matrix}
+\persiangloss{یکریختی}{isomorphism}
+\persiangloss{زیرگراف}{subgraph}
