--- a/dicfa2en.tex
+++ b/dicfa2en.tex
@@ -4,4 +4,6 @@
 \markboth{واژه‌نامه فارسی به انگلیسی}{واژه‌نامه فارسی به انگلیسی}
 
 \noindent
-\englishgloss{probability}{احتمال}
+\englishgloss{subgraph}{زیرگراف}
+\englishgloss{adjacency matrix}{ماتریس مجاورت}
+\englishgloss{isomorphism}{یکریختی}
