--- a/frontmatters.tex
+++ b/frontmatters.tex
@@ -96,9 +96,11 @@
 \\[2cm]
 نخست، پروردگارم را می‌ستایم به پاس رحمت‌های بی منتهایش. و سپس، پدر و مادرم را گرامی می‌دارم به پاس صبوریشان و همسرم را عزیز می‌شمارم به پاس همراهیش.
 
-از استاد ارجمندم، جناب آقای دکتر چنگیز اصلاحچی که با حسن خلق و فروتنی، از هیچ کمکی دریغ ننمودند و در این راه من را راهنمایی کردند، تشکر می‌کنم. تنش به ناز طبیبان بی‌نیاز باد.
+از استاد ارجمندم، جناب آقای دکتر چنگیز اصلاحچی که با حسن خلق و فروتنی، از هیچ کمکی دریغ ننمودند و زحمت راهنمایی پایان‌نامه را بر عهده گرفتند، تشکر می‌کنم. تنش به ناز طبیبان بی‌نیاز باد.
 
-از جناب آقای دکتر مهدی میرزایی که در انجام این طرح از کمک‌هایشان استفاده کردم تشکر می‌کنم.
+از جناب آقای دکتر گنجعلی که در انجام این طرح از کمک‌هایشان استفاده کردم تشکر می‌کنم. و هچنین دکتر طهماسبی و دکتر میرزایی که زحمت داوری این پایان‌نامه را بر عهده داشتند کمال تشکر را دارم.
+
+و در آخر، از اعضای محترم گروه علوم کامپیوتر دانشگاه شهید بهشتی به خاطر دلسوزی‌هایشان، و تشویق‌هایشان تشکر می‌کنم.
 
 \signature 
 \newpage
