--- a/biblio.bib
+++ b/biblio.bib
@@ -980,4 +980,10 @@
     number={1},
     pages={D485-D493}
 }
-
+@article{Kotlyar_2014,
+  title={In silico prediction of physical protein interactions and characterization of interactome orphans},
+  author={Kotlyar, Max and Pastrello, Chiara and Pivetta, Flavia and Sardo, Alessandra Lo and Cumbaa, Christian and Li, Han and Naranian, Taline and Niu, Yun and Ding, Zhiyong and Vafaee, Fatemeh and others},
+  journal={Nature methods},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
