--- a/frontmatters.tex
+++ b/frontmatters.tex
@@ -26,7 +26,7 @@
 \firstsupervisor{دکتر چنگیز اصلاحچی}
 %\secondsupervisor{استاد راهنمای دوم}
 % نام استاد(دان) مشاور را وارد کنید. چنانچه استاد مشاور ندارید، دستور پایین را غیرفعال کنید.
-\firstadvisor{دکتر مهدی میرزایی}
+\firstadvisor{دکتر مجتبی گنجلعی}
 %\secondadvisor{استاد مشاور دوم}
 % نام پژوهشگر را وارد کنید
 \name{مرتضی}
