--- a/chapter2.tex
+++ b/chapter2.tex
@@ -11,7 +11,7 @@
 \begin{figure}[t]
 \centering
 \includegraphics[scale=0.4]{./graphlets.png}
-\caption{گرافلت‌های دو تا پنج رأسی. رئوس همرنگ روی هر گرافلت، یک اوربیت را نمایش می‌دهند. شماره هر اوربیت روی یکی از رئوسش مشخص شده‌است.}
+\caption{گرافلت‌های دو تا پنج رأسی. رئوس همرنگ روی هر گرافلت، یک اوربیت را نمایش می‌دهند. شماره‌ی هر اوربیت روی یکی از رئوسش مشخص شده‌است.}
 \label{fig:graphlets}
 \end{figure}
 
@@ -84,7 +84,7 @@ $p(u,v) = deg(v) -1 -c(u,v)$.
 
 حال فرض کنید که در حال شمارش اوربیت‌های رأس $x$ هستیم و با زیرگراف القایی $H \simeq G_{7}$ روبرو می‌شویم که $x$ روی اوربیت $O_{12}$ قرار گرفته‌است. رئوس دیگر این زیرگراف را مانند شکل با $x_1$، $x_2$ و $x_3$ برچسب‌گذاری می‌کنیم. در گراف $G$، به تعداد $c(x_1,x_3)$ برای دو رأس $x_1$ و $x_3$ همسایه مشترک وجود دارد. ممکن است بعضی از این رئوس با $x$ یا $x_2$ و یا هر دوی آن‌ها نیز همسایه باشند. شکل \ارجا{fig:o59-orbit-relation} تمام چهار حالت ممکن را نمایش می‌دهد که گرافلت‌های $G_{24}$، $G_{26}$، $G_{27}$ و $G_{28}$ را بوجود می‌آورند و $x$ به ترتیب در اوربیت‌های ۵۹، ۶۵، ۶۸ و ۷۰ قرار می‌گیرد. بنابراین رابطه $o^\prime_{59}+ o^\prime_{65}+o^\prime_{68}+o^\prime_{70} = c(x_1,x_3)$ بدست می‌آید که در آن $o^\prime_i$ تعداد اوربیت‌های $x$ با توجه به زیرگراف $H$ است. برای بدست آوردن ارتباط $o_{59}$ ،  $o_{65}$ ،  $o_{68}$ و  $o_{70}$ باید این عبارت را روی تمام زیرگراف‌های القایی $G_7$ که $x$ روی اوربیت ۱۲ قرار می‌گیرد، جمع کنیم. با احتساب تقارن‌هایی که با تغییر برچسب‌گذاری‌ بوجود می‌آید خواهیم داشت:
 \begin{equation*}
-o_{59}+4o_{65}+2o_{68}+6o_{70} = \sum_{\substack{x_1,x_2,x_3:\\x_1 < x_2\wedge x_3 \notin N(x),\\G[\{x,x_1,x_2,x_3\}]\simeq G_7}}{c(x_1,x_3)+c(x_2,x_3)}
+o_{59}+4o_{65}+2o_{68}+6o_{70} = \sum_{\substack{x_1,x_2,x_3:\\x_1 < x_2\wedge x_3 \notin N(x),\\G[\{x,x_1,x_2,x_3\}]\simeq G_7}}{[c(x_1,x_3)+c(x_2,x_3)]}
 \end{equation*}
 شرط $x_1 < x_2$ تحت یک برچسب‌گذاری دلخواه روی رئوس، برای جلوگیری از شمارش دوباره گرافلت $G_7$ ضروری است. دو شرط بعد، موقعیت $x$ در اوربیت ۱۲ را بررسی می‌کنند. عبارت $c(x_2,x_3)$ حالتی را در نظر می‌گیرد که نقش $x_1$ و $x_2$ جابجا شده‌باشد.
 
@@ -119,7 +119,7 @@ k(G,G') = exp(-\gamma\parallel \hat{C}_G - \hat{C}_{G'}\parallel^2)
 در این بخش، عملکرد گرافلت کرنل گاوسی را در تشخیص و جداسازی مدل‌های گراف تصادفی از یکدیگر، می‌سنجیم. گراف تصادفی، گرافی است که توسط یک روند تصادفی ساخته می‌شود. یک مدل‌ گراف تصادفی، در واقع تعریف یک تابع احتمال خاص برای انتخاب گراف‌ها از گردایه‌ی تمام گراف‌های تصادفیِ ممکن است. این توزیع بگونه‌ای تعریف می‌شود که گراف‌های انتخابی دارای یک مشخصه مشترک باشند. مدل‌هایی که در ادامه به آن‌ها نیاز خواهیم داشت به شرح زیراند:
 
 \paragraph{مدل تصادفی اردوش و رنی (ER)}
-اردوش\پانوشت{\متن‌لاتین{Erdős}} و رنی\پانوشت{\متن‌لاتین{Rényi}} در سال ۱۹۵۹ مدلی برای گراف‌های تصادفی ارائه دادند\جستار{Erdos_1959} که اکنون به مدل \متن‌لاتین{ER} معروف است. گراف تصادفی اردوش-رنی $G(n,p)$، یک گراف با $n$ رأس است که در آن، یال‌ها به صورت مستقل و به احتمال $p$ از بین تمام یال‌های ممکن انتخاب شده‌اند. گرافی که با این روند تولید شود دارای توزیع درجه دوجمله‌ای است. برای $n$ های بزرگ، توزیع درجه، پواسون خواهد بود.
+اردوش\پانوشت{\متن‌لاتین{Erdős}} و رنی\پانوشت{\متن‌لاتین{Rényi}} در سال ۱۹۵۹ مدلی برای گراف‌های تصادفی ارائه دادند\جستار{Erdos_1959} که اکنون به مدل \متن‌لاتین{ER} معروف است. گراف تصادفی اردوش-رنی $G(n,p)$، یک گراف با $n$ رأس است که در آن، یال‌ها به صورت مستقل و به احتمال $p$ از بین تمام یال‌های ممکن انتخاب شده‌اند. گرافی که با این روند تولید شود دارای توزیع درجه دوجمله‌ای است. برای $n$ های بزرگ و $p$‌ کوچک، توزیع درجه، پواسون با میانگین $np$ خواهد بود.
 
 \paragraph{مدل تصادفی واتس و استروگاتس (WS)}
 این مدل در سال ۱۹۹۸ توسط واتس\پانوشت{\متن‌لاتین{Duncan J. Watts}} و استروگاتس\پانوشت{\متن‌لاتین{Steven Strogatz}} معرفی شد\جستار{Watts_1998} و اولین مدلی است که خاصیت جهان کوچک\پانوشت{\متن‌لاتین{Small-World}} را شبیه سازی می‌کند. این خاصیت بیان می‌کند که هر دو فرد در جهان با چند واسطه به یکدیگر متصل می‌شوند و تعداد این واسطه‌ها زیاد نیست (معمولاً بین ۳ تا ۶ واسطه). یک گراف تصادفی واتس و استروگاتس روی $N$ رأس، با میانگین درجه $K$ و پارامتر $\beta$ (
@@ -131,9 +131,9 @@ $0\leq \beta \leq 1$ و $N \geq K \geq ln(N) \geq 1$
 \end{enumerate}
 
 \paragraph{مدل تصادفی باراباشی و آلبرت (BA)}
-مدل تصادفی باراباشی\پانوشت{\متن‌لاتین{Barabasi}}-آلبرت\پانوشت{\متن‌لاتین{Albert}} در سال ۱۹۹۹ برای مدل‌سازی خاصیت \متن‌لاتین{scale-free} در شبکه‌های واقعی (مثل شبکه وب و یا خطوط انتقال برق)، طراحی شد\جستار{Barabasi_1999}. این خاصیت بیان می‌کند که اولاً شبکه‌ها در حال رشد کردن هستند یعنی به تعداد رئوس آن‌ها اضافه می‌شود، و ثانیاً احتمال بوجود آمدن یال بین رئوس جدید و رئوسی که بیشترین درجه را دارند، بیشتر است. این خاصیت در واقع اشاره‌ای به \خمیده{اثر متیو}\پانوشت{\متن‌لاتین{Matthew}} است که بیان می‌کند «پولدار، پولدارتر می‌شود»\جستار{Merton_1968}. برای تولید گراف با این خاصیت، یک گراف همبند با $n$ رأس در نظر گرفته می‌شود. رئوس جدید، یکی یکی به گراف افزوده می‌شوند. هر رأس جدید می‌تواند به $n$ رأس قبل به احتمالی بر حسب درجه رئوس، متصل شود. احتمال اینکه رأس جدید به رأس $n_i$ متصل شود برابر است با
+مدل تصادفی باراباشی\پانوشت{\متن‌لاتین{Barabasi}}-آلبرت\پانوشت{\متن‌لاتین{Albert}} در سال ۱۹۹۹ برای مدل‌سازی خاصیت \متن‌لاتین{scale-free} در شبکه‌های واقعی (مثل شبکه وب و یا خطوط انتقال برق)، طراحی شد\جستار{Barabasi_1999}. این خاصیت بیان می‌کند که اولاً شبکه‌ها در حال رشد کردن هستند یعنی به تعداد رئوس آن‌ها اضافه می‌شود، و ثانیاً احتمال بوجود آمدن یال بین رئوس جدید و رئوسی که بیشترین درجه را دارند، بیشتر است. این خاصیت در واقع اشاره‌ای به \خمیده{اثر متیو}\پانوشت{\متن‌لاتین{Matthew}} است که بیان می‌کند «پولدار، پولدارتر می‌شود»\جستار{Merton_1968}. برای تولید گراف با این خاصیت، یک گراف همبند با $n$ رأس در نظر گرفته می‌شود. رئوس جدید، یکی یکی به گراف افزوده می‌شوند. هر رأس جدید می‌تواند به $n$ رأس قبل؛ به احتمالی بر حسب درجه رئوس، متصل شود. احتمال اینکه رأس جدید به رأس $n_i$ متصل شود برابر است با
 $\dfrac{k_i}{\sum_jk_j}$ 
-که $k_i$ درجه رأس $n_i$ و جمع، روی کل رئوس گراف تا لحظه اضافه کردن $n_i$ است. گرافی که با این روند ساخته شود، دارای توزیع درجه \خمیده{\متن‌لاتین{power law}}  با پارامتر $\lambda = 3$ است. این توزیع به شکل $P(k) \sim k^{-\lambda}$ تعریف می‌شود.
+که $k_i$ درجه رأس $n_i$ و جمع، روی کل رئوس گراف تا لحظه اضافه کردن $n_i$ است. گرافی که با این روند ساخته شود، دارای توزیع درجه \خمیده{توانی}\پانوشت{\متن‌لاتین{power law}} با پارامتر $\lambda = 3$ است. این توزیع به شکل $P(k) \sim k^{-\lambda}$ تعریف می‌شود.
 
 \paragraph{مدل تصادفی هندسی (GEO)}
 مدل گراف تصادفی هندسی برای مدل‌سازی و تحلیل شبکه‌های سنسور بی‌سیم\جستار{Bettstetter_2002} و همچنین شبکه‌های تعاملات پروتئینی\جستار{Przulj_2004} مورد استفاده قرار گرفته است. در این مدل، 
