--- a/chapter3.tex
+++ b/chapter3.tex
@@ -54,7 +54,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 \end{figure}
 
 \subsection{عملکرد پروتئین}
-در فرآیندهای سلولی، پروتئین‌ها نقش اصلی را ایفا می‌کنند. در واقع تمام مولکول‌های دیگر موجود در سلول (به غیر از برخی RNA ها)، عناصری هستند که پروتئین‌ها برای انجام وظایف خود به ‌آن‌ها نیاز دارند و به وسیله‌ی آن‌ها فعالیت خود را انجام می‌دهند. مشخصه اصلی پروتئین‌ها که عملکرد‌های مختلف آن‌ها را نتیجه می‌دهد، توانایی اتصال به مولکول‌ها و پروتئین‌های دیگر است. قسمتی از پروتئین که این توانایی را فراهم می‌آورد، \خمیده{مقر اتصال} نامیده می‌شود که معمولاً به شکل یک حفره در سطح پروتئین واقع می‌گردد. نحوه فعالیت مقر اتصال و خصوصیات آن، توسط زنجیره جانبی اسید‌های آمینه اطراف آن مشخص می‌شود و به قدری خاص منظوره است که حتی یک تغییر کوچک در مولکول چسبنده، مانع از اتصال پروتئین خواهد شد. بنابراین ساختار سوم پروتئین مشخص کننده فعالیت‌ها و عملکرد‌های آن است.
+در فرآیندهای سلولی، پروتئین‌ها نقش اصلی را ایفا می‌کنند. در واقع تمام مولکول‌های دیگر موجود در سلول (به غیر از برخی RNA ها)، عناصری هستند که پروتئین‌ها برای انجام وظایف خود به ‌آن‌ها نیاز دارند و به وسیله‌ی آن‌ها فعالیت خود را انجام می‌دهند. مشخصه اصلی پروتئین‌ها که عملکرد‌های مختلف آن‌ها را نتیجه می‌دهد، توانایی اتصال به مولکول‌ها و پروتئین‌های دیگر است. قسمتی از پروتئین که این توانایی را فراهم می‌آورد، \خمیده{مقر اتصال} نامیده می‌شود که معمولاً به شکل یک حفره در سطح پروتئین واقع می‌گردد. نحوه فعالیت مقر اتصال و خصوصیات آن، توسط زنجیره جانبی اسید‌های آمینه اطراف آن مشخص می‌شود و به قدری خاص منظوره است که حتی یک تغییر کوچک در مولکول چسبنده، مانع از اتصال پروتئین خواهد شد. بنابراین ساختار سوم پروتئین، مشخص کننده فعالیت‌ها و عملکرد‌های آن پروتئین است.
 
 می‌توان فعالیت پروتئین‌ها را به سه دسته کلی تقسیم کرد\جستار{Alberts_2014}:
 
@@ -221,6 +221,4 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 \end{table}
 
 \section{جمع‌بندی}
-در این فصل، کاربرد گرافلت کرنل گاوسی برای پیش‌بینی عملکرد پروتئین‌ها را مورد بررسی قرار دادیم و نشان‌دادیم که این کرنل با سرعت بیشتر و دقت بهتری از گراف کرنل‌های پیشین می‌تواند پروتئین‌ها را به دسته‌های عملکردی تقسیم کند. محدودیتی که در این گراف کرنل وجود دارد این است که تنها، ساختار فضایی پروتئین برای تولید گراف استفاده شده‌است و در واقع بردار ویژگی‌ مورد استفاده محدود به ساختار پروتئین است. همانطور که در بخش \ارجا{
-sec:protein-function-prediction-review
-} اشاره شد، ساختار سوم به تنهایی نمی‌تواند پروتئین‌های هم‌عملکرد را بخوبی تشخیص دهد و باید از داده‌های دیگری نیز استفاده نمود. در کارهای آینده می‌توان بردارهای ویژگی را با استفاده از انواع داده‌ها نظیر ‌خصوصیات شیمیایی پروتئین، گسترش داد و نتایج دسته‌بندی را بهبود داد.
+در این فصل، کاربرد گرافلت کرنل گاوسی برای پیش‌بینی عملکرد پروتئین‌ها را مورد بررسی قرار دادیم و نشان‌دادیم که این کرنل با سرعت بیشتر و دقت بهتری از گراف کرنل‌های پیشین می‌تواند پروتئین‌ها را به دسته‌های عملکردی تقسیم کند. محدودیتی که در این گراف کرنل وجود دارد این است که تنها، ساختار فضایی پروتئین برای تولید گراف استفاده شده‌است و در واقع بردار ویژگی‌ مورد استفاده محدود به ساختار پروتئین است. همانطور که در بخش \ارجا{sec:protein-function-prediction-review} اشاره شد، ساختار سوم به تنهایی نمی‌تواند پروتئین‌های هم‌عملکرد را بخوبی تشخیص دهد و باید از داده‌های دیگری نیز استفاده نمود. در کارهای آینده می‌توان بردارهای ویژگی را با استفاده از انواع داده‌ها نظیر ‌خصوصیات شیمیایی پروتئین، گسترش داد و نتایج دسته‌بندی را بهبود داد.
