--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,5 +1,5 @@
 \chapter{تکمیل شبکه‌های تعاملات پروتئینی با استفاده از گرافلت کرنل گاوسی}\label{chap:network-completion-problem-ppi}
-همانطور که در فصل \ارجا{chap:protein_function_prediction} به آن اشاره شد، پروتئین‌ها اساس فعالیت‌های سلولی را تشکیل می‌دهند. اما پروتئینی که بتواند به تنهایی مفید باشد نادر است. آن‌ها معمولاً با اتصال به یکدیگر و تشکیل یک ساختار مرکب است که می‌توانند فعالیت‌های خود را انجام می‌دهند. به عنوان مثال، در فرآیند رونویسی از DNA\پانوشت{\متن‌لاتین{DNA replication}}، ماشین \متن‌لاتین{replisome} حداقل از تعامل فیزیکی ۴۰ پروتئین برای انجام وظیفه خود استفاده می‌کند\جستار{Macneill_2012}. مطالعه این تعاملات، نقش مهمی در درک سامانه‌های زیستی خواهد داشت و کشف دلایل و درمان بسیاری از بیماری‌ها به این وسیله ممکن خواهد بود\جستار{Ryan_2005}.
+همانطور که در فصل \ارجا{chap:protein_function_prediction} به آن اشاره شد، پروتئین‌ها اساس فعالیت‌های سلولی را تشکیل می‌دهند. اما پروتئینی که بتواند به تنهایی مفید باشد نادر است. آن‌ها معمولاً با اتصال به یکدیگر و تشکیل یک ساختار مرکب است که می‌توانند فعالیت‌های خود را انجام ‌دهند. به عنوان مثال، در فرآیند رونویسی از DNA\پانوشت{\متن‌لاتین{DNA replication}}، ماشین \متن‌لاتین{replisome} حداقل از تعامل فیزیکی ۴۰ پروتئین برای انجام وظیفه خود استفاده می‌کند\جستار{Macneill_2012}. مطالعه این تعاملات، نقش مهمی در درک سامانه‌های زیستی خواهد داشت و کشف دلایل و درمان بسیاری از بیماری‌ها به این وسیله ممکن خواهد بود\جستار{Ryan_2005}.
 
 به دلیل اهمیت فراوان موضوع، چندین روش آزمایشگاهی برای یافتن این تعاملات ابداع شده‌اند. پایگاه داده \متن‌لاتین{IntAct}\جستار{Hermjakob_2004} حدود ۱۷۰ روش آزمایشگاهی را در وب‌سایت خود لیست کرده‌است که می‌توانند برای این منظور استفاده شوند. بعضی از این روش‌ها \خمیده{کم‌توان}\پانوشت{\متن‌لاتین{low-throughput}} هستند، یعنی در هر بار آزمایش تنها می‌توانند تعداد اندکی از تعاملات را شناسایی کنند. از این تکنیک‌ها بیشتر برای راستی سنجی پیش‌بینی‌ها استفاده می‌شود و قابلیت استفاده گسترده برای تشخیص تمام تعاملات را ندارند. اما بعضی دیگر در اصطلاح \خمیده{پر‌توان}\پانوشت{\متن‌لاتین{high-throughput}} هستند و در هر بار آزمایش، تعاملات بین چندین پروتئین را تشخیص می‌دهند. در دسته‌بندی دیگر، می‌توان این روش‌ها را در دو گروه تشخیص روابط دوتایی و چندتایی جای داد، به این معنی که بعضی روش‌ها تعامل مستقیم دو پروتئین را رصد می‌کنند در حالی که بعضی دیگر تعامل بین دو یا چند پروتئین را تشخیص می‌دهند که ممکن است مستقیم و یا غیر مستقیم در ارتباط باشند.
 
@@ -32,12 +32,12 @@
 
 \subsection{روش‌های مبتنی بر ساختار شبکه}
 در نگاه ریاضیاتی به مسئله، شبکه تعاملات پروتئین، گرافی است که در آن مجموعه
-پروتئین‌های یک ارگانیسم، رئوس گراف و تعاملات بین آن‌ها، یال‌های این گراف در تشکیل می‌دهند. یعنی بین دو رأس، یال قرار می‌دهیم اگر پروتئین‌های متناظر تعامل داشته باشند. به اختصار به این شبکه‌، \متن‌لاتین{PIN}\پانوشت{\متن‌لاتین{Protein Interaction Network}} گفته می‌شود.
+پروتئین‌های یک ارگانیسم، رئوس گراف و تعاملات بین آن‌ها، یال‌های این گراف را تشکیل می‌دهند. یعنی بین دو رأس، یال قرار می‌دهیم اگر پروتئین‌های متناظر تعامل داشته باشند. به اختصار به این شبکه‌، \متن‌لاتین{PIN}\پانوشت{\متن‌لاتین{Protein Interaction Network}} گفته می‌شود.
 
 این شبکه‌ها توپولوژی یا ساختاری دارند که آن‌ها را از گراف‌های کاملاً تصادفی متمایز می‌کند. از این ویژگی‌های ساختاری برای تشخیص تعاملات اشتباه و پیش‌بینی تعاملات جدید و یا رتبه بندی تعاملات موجود استفاده می‌شود\جستار{Saito_2003}\جستار{Chen_2006}. اما به دلیل نرخ بالای خطا در شبکه‌های موجود، تشخیص ساختار و مدل‌سازی آن، مسئله ساده‌ای نیست و هنوز توافقی روی مدل مناسب برای \متن‌لاتین{PIN}ها صورت نگرفته است\جستار{Han_2005}.
 
 \section{روش پیشنهادی}
-همانطور که در فصل \ارجا{chap:protein_function_prediction} به آن اشاره شد، معمولاً پروتئین‌هایی که شکل یکسان دارند، عملکردشان نیز یکسان است. و باز در ابتدای همین فصل، اشاره شد که پروتئین‌ها با اتصال به دیگر پروتئین‌هاست که می‌توانند نقش خود را انجام دهند. بنابراین منطقی است که نتیجه بگیریم: پروتئین‌های مشابه از لحاظ ساختاری، احتملاً تعاملات مشابه‌ای هم دارند. پس اگر دو پروتئین «آ» و «ب» با هم تعامل داشته باشند و پروتئین «پ» شبیه «آ» و پروتئین «ت» شبیه «ب» باشد، می‌توانیم نتیجه بگیریم «پ» و «ت» هم تعامل دارند. عکس این موضوع نیز صادق است. یعنی اگر دو پروتئین «آ» و «ب» تعامل نداشته باشند، می‌توانیم نتیجه بگیریم احتمالاً «پ» و «ت» هم تعامل ندارند. هرچند همه چیز تا این حد ساده نیست و قوانین پیچیده‌تری بر تعاملات حکم فرماست، اما این ساده‌سازی باعث می‌شود به اطلاعات کمتری از پروتئین برای پیش‌بینی تعاملات آن، نیاز داشته باشیم.
+همانطور که در فصل \ارجا{chap:protein_function_prediction} به آن اشاره شد، معمولاً پروتئین‌هایی که شکل یکسان دارند، عملکردشان نیز یکسان است. و باز در ابتدای همین فصل، اشاره شد که پروتئین‌ها با اتصال به دیگر پروتئین‌هاست که می‌توانند نقش خود را انجام دهند. بنابراین منطقی است که نتیجه بگیریم: پروتئین‌های مشابه از لحاظ ساختاری، احتملاً تعاملات مشابه‌ای هم دارند. پس اگر دو پروتئین «آ» و «ب» با هم تعامل داشته باشند و پروتئین «پ» شبیه «آ» و پروتئین «ت» شبیه «ب» باشد، می‌توانیم نتیجه بگیریم «پ» و «ت» هم تعامل دارند. عکس این موضوع نیز صادق است. یعنی اگر دو پروتئین «آ» و «ب» تعامل نداشته باشند، می‌توانیم نتیجه بگیریم که احتمالاً «پ» و «ت» هم تعامل ندارند. هرچند همه چیز تا این حد ساده نیست و قوانین پیچیده‌تری بر تعاملات حکم فرماست، اما این ساده‌سازی باعث می‌شود به اطلاعات کمتری از پروتئین برای پیش‌بینی تعاملات آن، نیاز داشته باشیم.
 
 بر همین مبنا، روش پیشنهادی در این پایان‌نامه استفاده از گرافلت‌کرنل گاوسی به همراه ماشین \متن‌لاتین{SVM} روی ساختار سوم پروتئین‌هاست. می‌خواهیم ماشین \متن‌لاتین{SVM} را طوری آموزش دهیم که یک ورودی به صورت دوتایی $(p_i,p_j)$ (که $p_i$ و $p_j$ پروتئین هستند) دریافت کند و بگوید این دو پروتئین تعامل دارند یا خیر. برای آموزش این ماشین نیاز به مجموعه‌ای به صورت
 \begin{equation*}
