--- a/frontmatters.tex
+++ b/frontmatters.tex
@@ -21,7 +21,7 @@
 % گرایش خود را وارد کنید
 \field{بیوانفورماتیک}
 % عنوان پایان‌نامه را وارد کنید
-\title{بررسی مسئله تکمیل شبکه بر روی شبکه تعاملات پروتئین-پروتئین}
+\title{بررسی مسئله‌ی تکمیل شبکه بر روی شبکه‌های تعاملی پروتئین-پروتئین}
 % نام استاد(ان) راهنما را وارد کنید
 \firstsupervisor{دکتر چنگیز اصلاحچی}
 %\secondsupervisor{استاد راهنمای دوم}
@@ -38,7 +38,7 @@
 \keywords{گراف، گرافلت، یادگیری ماشین، کرنل، بیوانفورماتیک، عملکرد پروتئین}
 % چکیده پایان‌نامه را وارد کنید
 \fa-abstract{\noindent
-امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده روبرو است. بسیاری از این داده‌ها در قالب روابط بین موجودیت‌ها معنی پیدا می‌کنند. در بیولوژی داده‌هایی نظیر تعاملات پروتئین، روابط تنظیمی بین ژن‌ها، هم‌بیانی ژن‌ها، متابولیسم و ... در قالب گراف یا شبکه مدل می‌شوند. گراف، یک ساختار انعطاف‌پذیر و مناسب برای مدل‌سازی این نوع داده‌ها بدست می‌دهد. متأسفانه علیرغم اهمیت این موضوع، تکنیک‌های یادگیری ماشین روی ساختار گراف، دچار کمبود‌های جدی هستند و هنوز به تکامل نرسیده‌اند. دلیل این امر شاید پیچیده‌بودن مقایسه دو گراف باشد. در این پایان‌نامه، راه بهینه‌ای برای مقایسه دو گراف ارائه می‌دهیم و تابع کرنلی را تعریف می‌کنیم که به کمک آن می‌توان از الگوریتم‌های یادگیری ماشین روی داده‌های گراف به نحو بهینه و با دقت بالا استفاده کرد. سپس از این کرنل برای تکمیل شبکه‌های تعاملات پروتئین استفاده می‌کنیم. یعنی قسمت‌های دیده نشده از شبکه را پیش‌بینی و قسمت‌های اشتباه شبکه را تصحیح می‌کنیم.
+امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده‌ها روبرو است. بسیاری از این داده‌ها در قالب روابط بین موجودیت‌ها معنی پیدا می‌کنند. در بیولوژی داده‌هایی نظیر تعاملات پروتئین، روابط تنظیمی بین ژن‌ها، هم‌بیانی ژن‌ها، متابولیسم و ... در قالب گراف یا شبکه مدل می‌شوند. گراف، یک ساختار انعطاف‌پذیر و مناسب برای مدل‌سازی این نوع داده‌ها بدست می‌دهد. متأسفانه علیرغم اهمیت این موضوع، تکنیک‌های یادگیری ماشین روی ساختار گراف، دچار کمبود‌های جدی هستند و هنوز به تکامل نرسیده‌اند. دلیل این امر شاید پیچیده‌بودن مقایسه دو گراف باشد. در این پایان‌نامه، راه بهینه‌ای برای مقایسه دو گراف ارائه می‌دهیم و تابع کرنلی را تعریف می‌کنیم که به کمک آن می‌توان از الگوریتم‌های یادگیری ماشین روی داده‌های گراف به نحو بهینه و با دقت بالا استفاده کرد. سپس از این کرنل برای تکمیل شبکه‌های تعاملات پروتئین استفاده می‌کنیم. یعنی قسمت‌های دیده نشده از شبکه را پیش‌بینی و قسمت‌های اشتباه شبکه را تصحیح می‌کنیم.
 }
 \newpage
 \thispagestyle{empty}
@@ -96,9 +96,9 @@
 \\[2cm]
 نخست، پروردگارم را می‌ستایم به پاس رحمت‌های بی منتهایش. و سپس، پدر و مادرم را گرامی می‌دارم به پاس صبوریشان و همسرم را عزیز می‌شمارم به پاس همراهیش.
 
-از استاد ارجمندم، جناب آقای دکتر چنگیز اصلاحچی که با حسن خلق و فروتنی، از هیچ کمکی دریغ ننمودند و زحمت راهنمایی پایان‌نامه را بر عهده گرفتند، تشکر می‌کنم. تنش به ناز طبیبان بی‌نیاز باد.
+از استاد ارجمندم، جناب آقای دکتر چنگیز اصلاحچی که با حسن خلق و فروتنی، از هیچ کمکی دریغ ننمودند و زحمت راهنمایی این پایان‌نامه را بر عهده گرفتند، تشکر می‌کنم. تنش به ناز طبیبان بی‌نیاز باد.
 
-از جناب آقای دکتر گنجعلی که در انجام این طرح از کمک‌هایشان استفاده کردم تشکر می‌کنم. و هچنین دکتر طهماسبی و دکتر میرزایی که زحمت داوری این پایان‌نامه را بر عهده داشتند کمال تشکر را دارم.
+از جناب آقای دکتر گنجعلی که در انجام این طرح از کمک‌هایشان استفاده کردم تشکر می‌کنم. و هچنین از دکتر مریم طهماسبی و دکتر مهدی میرزایی که زحمت داوری این پایان‌نامه را بر عهده داشتند، کمال تشکر را دارم.
 
 و در آخر، از اعضای محترم گروه علوم کامپیوتر دانشگاه شهید بهشتی به خاطر دلسوزی‌هایشان، و تشویق‌هایشان تشکر می‌کنم.
 
