--- a/introduction.tex
+++ b/introduction.tex
@@ -3,7 +3,7 @@
 \addcontentsline{toc}{chapter}{مقدمه}
 \chapter*{مقدمه}\markboth{مقدمه}{مقدمه}
 
-امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده\پانوشت{data} روبرو است. شرکت‌های تجاری، مراکز علمی و مؤسسات تحقیقاتی سعی دارند از این داده‌ها در جهت برآوردن نیاز مشتریان، درک بهتر جهان هستی و ساخت تکنولوژی‌های جدید بهره ببرند. استفاده از این داده‌ها جز با استخراج دانش از آن‌ها ممکن نیست. طراحی روش و الگوریتم برای استنتاج قواعد کلی از یک سری داده‌ی مشاهده شده، موضوع اصلی یادگیری ماشین است.
+امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده‌ها\پانوشت{data} روبرو است. شرکت‌های تجاری، مراکز علمی و مؤسسات تحقیقاتی سعی دارند از این داده‌ها در جهت برآوردن نیاز مشتریان، درک بهتر جهان هستی و ساخت تکنولوژی‌های جدید بهره ببرند. استفاده از این داده‌ها جز با استخراج دانش از آن‌ها ممکن نیست. طراحی روش و الگوریتم برای استنتاج قواعد کلی از یک سری داده‌ی مشاهده شده، موضوع اصلی یادگیری ماشین است.
 
 داده یک مفهوم قراردادی و وابسته به دامنه\پانوشت{domain} است. از این‌رو برای نمایش آن، روش‌های مختلفی وجود دارد: در بعضی کاربردها، کافی است داده‌ها را به صورت عددی یا برداری\پانوشت{vector} از اعداد نمایش داد. اما در برخی موارد، نمایش سطح بالاتری برای بیان حق مطلب مورد نیاز است. برای مثال، اگر بخواهیم موضوع یک متن را بر اساس تکرار کلمات پیش‌بینی کنیم، کافی است یک بردار عددی تشکیل دهیم که عناصر این بردار نمایش‌دهنده میزان تکرار کلمات از پیش تعیین شده در آن متن است. اما اگر بخواهیم بین رفتار یک مولکول با ساختار آن رابطه‌ای برقرار کنیم، آنگاه نمی‌توان به سادگی مولکول را یک عدد یا برداری از اعداد در نظر گرفت. ساختار مولکول و همچنین بسیاری دیگر از داده‌ها معمولاً با بهره‌گیری از گراف‌ها مدل می‌شود.
 
@@ -11,11 +11,9 @@
 
 به دلیل همین انعطاف‌پذیری، گراف در بسیاری از رشته‌ها مورد توجه قرار گرفته است و بسیاری از انواع داده با گراف مدل می‌شوند. در زیر به کاربرد گراف در دو رشته که با موضوع پایان‌نامه پیشرو مرتبط است، اشاره می‌کنیم.
 
-\درشت{شیمی} یکی از رشته‌هایی است که استفاده‌ی فراوانی از گراف دارد\جستار{Gasteiger_2003}. جستجو برای یافتن ترکیبات شیمیایی که خواص مشخصی داشته باشند امری رایج در شیمی است. روش‌های آزمایشگاهی برای اینکار بسیار پر هزینه و زمانبر هستند. از اینرو روش‌های محاسباتی مورد نیاز است که بتواند چند ترکیب با خصوصیات مدنظر را به عنوان نامزد معرفی کند. در این صورت می‌توان با هزینه‌ی کمتر این نامزدها را در آزمایشگاه مورد سنجش قرار داد. برای این منظور، ترکیبات شیمیایی به صورت گراف-همانطور که در بالا شرح داده‌شد-مدل می‌شوند. در روش محاسباتی، که معمولاً با عنوان QSAR و QSPR شناخته می‌شود فرض این است که مولکول‌هایی که ساختار مشابه دارند دارای خواص مشابه هستند. بنابراین اندازه‌گیری میزان شباهت دو گراف مسئله‌ای مهم در شیمی محاسباتی\پانوشت{chemoinformatics} است.
+\درشت{شیمی} یکی از رشته‌هایی است که استفاده‌ی فراوانی از گراف دارد\جستار{Gasteiger_2003}. جستجو برای یافتن ترکیبات شیمیایی‌ که خواص مشخصی داشته باشند امری رایج در شیمی است. روش‌های آزمایشگاهی برای اینکار بسیار پر هزینه و زمانبر هستند. از اینرو روش‌های محاسباتی‌ای مورد نیاز است که بتواند چند ترکیب با خصوصیات مدنظر را به عنوان نامزد معرفی کند. در این صورت می‌توان با هزینه‌ی کمتر این نامزدها را در آزمایشگاه مورد سنجش قرار داد. برای این منظور، ترکیبات شیمیایی به صورت گراف-همانطور که در بالا شرح داده‌شد-مدل می‌شوند. در روش محاسباتی، که معمولاً با عنوان QSAR و QSPR شناخته می‌شود فرض این است که مولکول‌هایی که ساختار مشابه دارند دارای خواص مشابه هستند. بنابراین اندازه‌گیری میزان شباهت دو گراف مسئله‌ای مهم در شیمی محاسباتی\پانوشت{chemoinformatics} است.
 
-\درشت{بیوانفورماتیک}\پانوشت{bioinformatics} شاخه نسبتاً جدیدی در زیست‌شناسی است که استفاده از گراف در آن رایج است\جستار{Junker_2008}. از گراف‌ برای نمایش داده‌هایی نظیر ساختار پروتئین‌\پانوشت{\متن‌لاتین{protein structure}}، هم‌بیانی\پانوشت{co-expression} پروتئین‌ها یا ژن‌ها، تعاملات پروتئین-پروتئین\پانوشت{\متن‌لاتین{protein-protein interactions}}، شبکه‌های تنظیمی\پانوشت{\متن‌لاتین{regulatory networks}} و شبکه‌های متابولیک\پانوشت{\متن‌لاتین{metabolic networks}} استفاده می‌شود. سؤالات جالبی در ارتباط با این گراف‌ها مطرح می‌شود. مثلاً ارتباط ساختار پروتئین با خصوصیات یا عملکرد\پانوشت{function} آن چیست، آیا می‌توان با استفاده از ساختار پروتئین‌ها تعاملات بین آن‌ها را پیش‌بینی کرد، شبکه‌های تنظیمی چطور بر روی فنوتیپ\پانوشت{phenotype} تاثیر دارند و سؤالاتی از این دست. تا به امروز، داده‌های زیستی به طور معمول ناکامل و نویزدار هستند و طبیعتاً گراف‌هایی که از آن‌ها بدست می‌آید تصویر درست و کاملی ارائه نمی‌کند. به همین دلیل استفاده از تکنیک‌های یادگیری ماشین در این رشته، پر کاربرد و در عین حال چالش برانگیز است.
-
- % \درشت{شبکه‌های اجتماعی} از دیگر رشته‌هایی است که گراف‌ها و تکنیک‌های یادگیری ماشین، در آن بسیار مورد استفاده قرار می‌گیرند\جستار{Carrington_2005}. در سال‌های اخیر شاهد گسترش نرم‌افزارها و وب‌سایت‌های اجتماعی بوده‌ایم که در حقیقت گراف‌هایی بسیار بزرگ هستند. در ساده‌ترین حالت، گره‌های چنین گراف‌هایی اعضای شبکه اجتماعی هستند و یال بین دو گره نشان‌دهنده ارتباط بین دو عضو متناظر است. مسائلی در ارتباط با این شبکه‌ها مطرح می‌شود مثل پیش‌بینی سلایق یک شخص با توجه به دایره ارتباطات وی، میزان نفوذ افراد روی یکدیگر و یا پرسش‌های کلی‌تر مثل اینکه آیا شبکه‌های اجتماعی ساختار یکسانی دارند یا خیر.
+\درشت{بیوانفورماتیک}\پانوشت{bioinformatics} شاخه نسبتاً جدیدی در زیست‌شناسی است که استفاده از گراف در آن رایج است\جستار{Junker_2008}. از گراف‌ برای نمایش داده‌هایی نظیر ساختار پروتئین‌\پانوشت{\متن‌لاتین{protein structure}}، هم‌بیانی\پانوشت{co-expression} پروتئین‌ها یا ژن‌ها، تعاملات پروتئین-پروتئین\پانوشت{\متن‌لاتین{protein-protein interactions}}، شبکه‌های تنظیمی\پانوشت{\متن‌لاتین{regulatory networks}} و شبکه‌های متابولیک\پانوشت{\متن‌لاتین{metabolic networks}} استفاده می‌شود. سؤالات جالبی در ارتباط با این گراف‌ها مطرح می‌شود. مثلاً ارتباط ساختار پروتئین با خصوصیات یا عملکرد\پانوشت{function} آن چیست، آیا می‌توان با استفاده از ساختار پروتئین‌ها تعاملات بین آن‌ها را پیش‌بینی کرد، شبکه‌های تنظیمی چطور بر روی رُخ‌نمود\پانوشت{phenotype} تاثیر دارند و سؤالاتی از این دست. تا به امروز، داده‌های زیستی به طور معمول ناکامل و نویزدار هستند و طبیعتاً گراف‌هایی که از آن‌ها بدست می‌آید تصویر درست و کاملی ارائه نمی‌کند. به همین دلیل استفاده از تکنیک‌های یادگیری ماشین در این رشته، پر کاربرد و در عین حال چالش برانگیز است.
 
 علاوه بر این رشته‌ها، گراف‌ها در تحلیل شبکه‌های اجتماعی\جستار{Carrington_2005}، پردازش تصویر\جستار{Lezoray_2012} و تحلیل شبکه‌ جهانی وب مورد استفاده گسترده قرار می‌گیرند.
 
@@ -25,14 +23,14 @@
 
 در این پایان‌نامه برآنیم که مشکلات روش‌های پیشین برای اندازه‌گیری میزان شباهت دو گراف را شرح دهیم و روش بهتری به همین منظور ارائه کنیم.
 
-در فصل \ارجا{chap:prerequisites} بطور مختصر نظریه گراف، ساختمان‌داده‌ گرافی، مقایسه گراف‌ها، روش تابع کرنل\پانوشت{\متن‌لاتین{kernel method}} در یادگیری ماشین و توابع کرنل گرافی\پانوشت{\متن‌لاتین{graph kernels}} را بررسی می‌کنیم. در فصل \ارجا{chap:gaussian-graphlet-kernel} تابع گرافلت کرنل گاوسی\پانوشت{\متن‌لاتین{gaussian graphlet kernel}} را معرفی می‌کنیم و دقت آن را تشخیص مد‌ل‌های تصادفی گراف از یکدیگر، می‌سنجیم. در فصل \ارجا{chap:protein_function_prediction} توانایی تابع گرافلت کرنل گاوسی در پیش‌بینی عملکرد پروتئین‌ها را مورد مطالعه قرار می‌دهیم و نشان می‌دهیم که این کرنل در مقایسه با کرنل‌های پیشین، دقت بالاتری دارد. و در آخر، در فصل \ارجا{chap:network-completion-problem-ppi} از گرافلت کرنل گاوسی برای پیش‌بینی تعاملات پروتئینی و تصحیح تعاملات موجود، استفاده می‌کنیم. 
+در فصل \ارجا{chap:prerequisites} بطور مختصر نظریه‌ی گراف، مقایسه گراف‌ها، روش تابع کرنل\پانوشت{\متن‌لاتین{kernel method}} در یادگیری ماشین و توابع کرنل گرافی\پانوشت{\متن‌لاتین{graph kernels}} را بررسی می‌کنیم. در فصل \ارجا{chap:gaussian-graphlet-kernel} تابع گرافلت کرنل گاوسی\پانوشت{\متن‌لاتین{gaussian graphlet kernel}} را معرفی می‌کنیم و دقت آن را در تشخیص مد‌ل‌های تصادفی گراف از یکدیگر، می‌سنجیم. در فصل \ارجا{chap:protein_function_prediction} توانایی تابع گرافلت کرنل گاوسی در پیش‌بینی عملکرد پروتئین‌ها را مورد مطالعه قرار می‌دهیم و نشان می‌دهیم که این کرنل در مقایسه با کرنل‌های پیشین، دقت بالاتری دارد. و در آخر، در فصل \ارجا{chap:network-completion-problem-ppi} از گرافلت کرنل گاوسی برای پیش‌بینی تعاملات پروتئینی و تصحیح تعاملات موجود، استفاده می‌کنیم. 
 
 \subsection*{
 مقالات مستخرج از این پایان نامه
 }
 از این پایان‌نامه یک مقاله تحت عنوان 
-\lr{Protein function prediction via gaussian graphlet kernel}
-از فصل سوم، استخراج و تحت بازبینی در ژورنال آکسفرد بیوانفورماتیک است. 
+\lr{Protein function prediction via Gaussian graphlet kernel}
+از فصل سوم، استخراج و برای داوری ارسال شده‌است. 
 مقاله دیگری تحت عنوان 
-\lr{Revealing effective general purpose classifiers for networked data}
-برگرفته از فصل دوم، نیز در حال آماده‌سازی است.
+\lr{Structure-based denoising of PPI networks}
+برگرفته از فصل چهارم، نیز در حال آماده‌سازی است.
